bugs: 1628728, 1637772, 1630364, 1628075, 1629742, 1595640, 1637772,  1638436, 1629742 Merge CLN 4170509 4170518, 4170552, 4170624, 4170638, 4170643, 4171328,  4171336, 4171340 from P4Please enter the commit message for your changes. Lines starting
Change-Id: I0edc51368c69e159a92fbe9d52a9031c8f90f40d

--- a/tools/mac/VMPSCHighAvailabilitySnapIn/LightwavePSCHighAvailability/UI/Monitor.xib
+++ b/tools/mac/VMPSCHighAvailabilitySnapIn/LightwavePSCHighAvailability/UI/Monitor.xib
@@ -62,7 +62,7 @@
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="JbD-Uv-JuS">
-                            <rect key="frame" x="19" y="174.00000051090137" width="524" height="17"/>
+                            <rect key="frame" x="19" y="173.99997073878217" width="524" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Services hosted on " id="xHx-Js-v4m">
                                 <font key="font" size="13" name=".HelveticaNeueDeskInterface-Bold"/>
@@ -87,7 +87,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" headerView="M2F-k6-LI9" id="Cm0-jw-KI4">
-                                        <rect key="frame" x="0.0" y="0.0" width="617" height="124"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="617" height="19"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -271,13 +271,13 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" headerView="201" id="191">
-                                        <rect key="frame" x="0.0" y="0.0" width="516" height="19"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="513" height="19"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                         <tableColumns>
-                                            <tableColumn identifier="Host name" width="260" minWidth="40" maxWidth="1000" id="194">
+                                            <tableColumn identifier="Host name" width="177" minWidth="40" maxWidth="1000" id="194">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Host Name">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -329,13 +329,26 @@
                                                 </textFieldCell>
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             </tableColumn>
+                                            <tableColumn identifier="Site Location" width="77" minWidth="10" maxWidth="3.4028234663852886e+38" id="Lhm-ec-wqc">
+                                                <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Site Location">
+                                                    <font key="font" metaFont="smallSystem"/>
+                                                    <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                </tableHeaderCell>
+                                                <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="m7r-Gd-mRd">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                                <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                            </tableColumn>
                                         </tableColumns>
                                     </tableView>
                                 </subviews>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </clipView>
                             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="190">
-                                <rect key="frame" x="1" y="158" width="520" height="16"/>
+                                <rect key="frame" x="1" y="122" width="520" height="16"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
                             <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="189">
