Bug Fixed: 1647115, 1646998, 1647185, 1647185, 1639957 CLN: 4203631, 4205329, 4205666, 4205874, 4205901, 4205916
Change-Id: Id6ac6cda1b5101827c2c285796150037cb0ee3af

--- a/tools/mac/VMPSCHighAvailabilitySnapIn/LightwavePSCHighAvailability/UI/Monitor.xib
+++ b/tools/mac/VMPSCHighAvailabilitySnapIn/LightwavePSCHighAvailability/UI/Monitor.xib
@@ -14,6 +14,7 @@
                 <outlet property="HostnameHeader" destination="FPK-WI-SAX" id="esr-aV-yqF"/>
                 <outlet property="IntervalComboBox" destination="68" id="151"/>
                 <outlet property="LastRefreshTextField" destination="159" id="165"/>
+                <outlet property="LegacyModeWarning" destination="Bxt-qx-olC" id="m28-OE-BYL"/>
                 <outlet property="PscTableView" destination="191" id="198"/>
                 <outlet property="RefreshButton" destination="24T-Xw-8V7" id="SCR-RQ-TML"/>
                 <outlet property="ServicesTableView" destination="Cm0-jw-KI4" id="EEf-eB-GEO"/>
@@ -34,15 +35,6 @@
                     <rect key="frame" x="0.0" y="0.0" width="564" height="583"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="220">
-                            <rect key="frame" x="494" y="544" width="62" height="17"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="FULL" id="221">
-                                <font key="font" size="13" name=".HelveticaNeueDeskInterface-Regular"/>
-                                <color key="textColor" name="selectedControlTextColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="212">
                             <rect key="frame" x="20" y="474" width="51" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -67,15 +59,6 @@
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Services hosted on " id="xHx-Js-v4m">
                                 <font key="font" size="13" name=".HelveticaNeueDeskInterface-Bold"/>
                                 <color key="textColor" name="selectedControlTextColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="159">
-                            <rect key="frame" x="394" y="220" width="146" height="14"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="01-DEC-2013 01:00:00" id="160">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
@@ -179,7 +162,7 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="20">
                             <rect key="frame" x="73" y="469" width="248" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Status" id="21">
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" id="21">
                                 <font key="font" size="13" name=".HelveticaNeueDeskInterface-Regular"/>
                                 <color key="textColor" name="selectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -188,46 +171,14 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="9MK-cF-orw">
                             <rect key="frame" x="78" y="505" width="465" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Sitename" id="cJy-9P-nqr">
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" id="cJy-9P-nqr">
                                 <font key="font" size="11" name=".HelveticaNeueDeskInterface-Regular"/>
                                 <color key="textColor" name="selectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <button hidden="YES" id="66">
-                            <rect key="frame" x="329" y="188" width="104" height="18"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="check" title="Auto-Refresh" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="67">
-                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                        </button>
-                        <comboBox hidden="YES" verticalHuggingPriority="750" id="68">
-                            <rect key="frame" x="436" y="183" width="51" height="26"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="30" placeholderString="interval" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="69">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <objectValues>
-                                    <string>30</string>
-                                    <string>60</string>
-                                    <string>120</string>
-                                    <string>300</string>
-                                </objectValues>
-                            </comboBoxCell>
-                        </comboBox>
-                        <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="70">
-                            <rect key="frame" x="487" y="189" width="57" height="17"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="seconds" id="71">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
                         <button verticalHuggingPriority="750" id="24T-Xw-8V7">
-                            <rect key="frame" x="14" y="209" width="100" height="32"/>
+                            <rect key="frame" x="14" y="197" width="100" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Refresh" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="CfY-zA-N0M">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -260,11 +211,11 @@
                         </textField>
                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="1Gi-I1-qTr">
                             <rect key="frame" x="19" y="546" width="28" height="28"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="left" imageScaling="proportionallyUpOrDown" image="host" id="nMk-4v-HjT"/>
                         </imageView>
                         <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="188">
-                            <rect key="frame" x="19" y="245" width="522" height="139"/>
+                            <rect key="frame" x="19" y="231" width="522" height="139"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <clipView key="contentView" id="3Rp-2o-pou">
                                 <rect key="frame" x="1" y="17" width="520" height="121"/>
@@ -361,7 +312,7 @@
                             </tableHeaderView>
                         </scrollView>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Q62-8O-6u1">
-                            <rect key="frame" x="19" y="395" width="130" height="17"/>
+                            <rect key="frame" x="19" y="380" width="130" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Domain Controllers:" id="UHV-s6-hYf">
                                 <font key="font" size="13" name=".HelveticaNeueDeskInterface-Bold"/>
@@ -370,7 +321,7 @@
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="161">
-                            <rect key="frame" x="269" y="219" width="121" height="16"/>
+                            <rect key="frame" x="269" y="207" width="121" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Last Refreshed On:" id="162">
                                 <font key="font" metaFont="system"/>
@@ -391,9 +342,68 @@
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="88B-S2-1YE">
                             <rect key="frame" x="199" y="435" width="344" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="domain controller" id="WTe-4y-yvl">
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" id="WTe-4y-yvl">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="selectedControlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="220">
+                            <rect key="frame" x="495" y="544" width="62" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="FULL" id="221">
+                                <font key="font" size="13" name=".HelveticaNeueDeskInterface-Regular"/>
+                                <color key="textColor" red="0.0" green="0.59595959600000004" blue="0.0001824374123" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Bxt-qx-olC">
+                            <rect key="frame" x="19" y="408" width="522" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="WARNING! No service detection when in Legacy Mode." id="INt-ki-OFW">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="selectedMenuItemColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <button hidden="YES" id="66">
+                            <rect key="frame" x="324" y="174" width="104" height="18"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="check" title="Auto-Refresh" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="67">
+                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <comboBox hidden="YES" verticalHuggingPriority="750" id="68">
+                            <rect key="frame" x="431" y="169" width="51" height="26"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="30" placeholderString="interval" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="69">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <objectValues>
+                                    <string>30</string>
+                                    <string>60</string>
+                                    <string>120</string>
+                                    <string>300</string>
+                                </objectValues>
+                            </comboBoxCell>
+                        </comboBox>
+                        <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="70">
+                            <rect key="frame" x="482" y="175" width="57" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="seconds" id="71">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="159">
+                            <rect key="frame" x="394" y="205" width="146" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" id="160">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
