Bug fix: 1702795, 1700067, 1699250, Added ReadMe.md
Change-Id: I50b9e84102324aa222b9c1af7b8fbfa05937f07f

--- a/vmidentity/lightwaveui/web/app/app.css
+++ b/vmidentity/lightwaveui/web/app/app.css
@@ -296,7 +296,7 @@ body {
 
 .large-grid-header div{
   border-right: 1px solid #DDDDDD;
-  text-align: center;
+  text-align: left;
   padding: 0px 12px;
   height:36px;
   font-weight: 700;
