Lightwave UI Directory and Schema bug fixes. Updated Mac Lightwave UI buildscript. (Sync up to 4400210) Change-Id: I85341c6419b758a4e3ba79eec411a2721fc9a9f5

--- a/tools/mac/VMDirSnapIn/VMDirSnapIn/UI/Search/SearchWindow.xib
+++ b/tools/mac/VMDirSnapIn/VMDirSnapIn/UI/Search/SearchWindow.xib
@@ -552,7 +552,7 @@ DQ
                                                                 <textField verticalHuggingPriority="750" id="keK-bx-g4b">
                                                                     <rect key="frame" x="105" y="7" width="88" height="22"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" drawsBackground="YES" id="d7j-LO-yVe">
+                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" enabled="NO" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" drawsBackground="YES" id="d7j-LO-yVe">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -690,7 +690,7 @@ DQ
         </window>
     </objects>
     <resources>
-        <image name="ExportImg" width="128" height="128"/>
+        <image name="ExportImg" width="64" height="64"/>
         <image name="OpenImg" width="64" height="64"/>
         <image name="OperationalAttrImg" width="64" height="64"/>
         <image name="OptionalAttrImg" width="64" height="64"/>
